people section upgrade
added missing photos, change name disply, divided members from
collaborators

--- a/people/_posts/2017-12-11-wkalwak.md
+++ b/people/_posts/2017-12-11-wkalwak.md
@@ -1,6 +1,8 @@
 ﻿---
 layout: post
 title:  "Weronika Kałwak"
+name: Weronika
+surname: Kałwak
 date:   2017-12-11 09:00:00
 categories: people
 image-file: /images/people/wkalwak.jpg
@@ -11,7 +13,7 @@ twitter:
 researchgate: 
 ---
 
-Post-doc in the Institute of Psychology, Jagiellonian University.
+PhD student in the Institute of Psychology, Jagiellonian University.
 
 My scientific interest is human experience of any kind but especially our scientific ways of acknowledge it. I’m trying to convince experimental researchers to use qualitative methodology.
 
@@ -20,10 +22,3 @@ Research interests:
 – philosophy of mind (philosophy of mental health)
 – phenomenology
 – medical humanities
-
-
-
-    
-    
-    
-    
