--- a/people/_posts/2017-12-12-nspychała.md
+++ b/people/_posts/2017-12-12-nspychała.md
@@ -1,6 +1,8 @@
 ﻿---
 layout: post
 title:  "Nadine Spychała"
+name: Nadine
+surname: Spychała
 date:   2017-12-12 09:00:00
 categories: people
 image-file: /images/people/nspychala.jpg
@@ -21,10 +23,3 @@ Research interests:
 – intentional binding
 – decision-making
 – philosophy of psychology & mind
-
-
-
-    
-    
-    
-    
