--- a/people/_posts/2017-12-14-obecev.md
+++ b/people/_posts/2017-12-14-obecev.md
@@ -1,6 +1,8 @@
 ﻿---
 layout: post
 title:  "Ondřej Bečev"
+name: Ondřej
+surname: Bečev
 date:   2017-12-14 09:00:00
 categories: people
 image-file: /images/people/obecev.jpg
@@ -21,10 +23,3 @@ Research interests:
 – measures of agency
 – intentional binding
 – predictive coding
-
-
-
-    
-    
-    
-    
