--- a/people/_posts/2017-12-19-zskora.md
+++ b/people/_posts/2017-12-19-zskora.md
@@ -1,6 +1,8 @@
 ﻿---
 layout: post
 title:  "Zuzanna Skóra"
+name: Zuzanna
+surname: Skóra
 date:   2017-12-19 09:00:00
 categories: people
 image-file: /images/people/zskora.jpg
@@ -20,10 +22,3 @@ Research interests:
 – relationship between memory & consciousness
 – bayesian approach to data analysis
 – open science
-
-
-
-    
-    
-    
-    
