--- a/people/_posts/2017-12-20-sdelpin.md
+++ b/people/_posts/2017-12-20-sdelpin.md
@@ -1,6 +1,8 @@
 ﻿---
 layout: post
 title:  "Simon del Pin"
+name: Simon
+surname: del Pin
 date:   2017-12-20 09:00:00
 categories: people
 image-file: /images/people/sdelpin.jpg
@@ -12,10 +14,3 @@ researchgate:
 ---
 
 PhD student in the Institute of Psychology, Jagiellonian University.
-
-
-
-    
-    
-    
-    
