--- a/people/_posts/2017-12-22-mkoculak.md
+++ b/people/_posts/2017-12-22-mkoculak.md
@@ -1,6 +1,8 @@
 ﻿---
 layout: post
 title:  "Marcin Koculak"
+name: Marcin
+surname: Koculak
 date:   2017-12-22 09:00:00
 categories: people
 image-file: /images/people/mkoculak.jpg
@@ -21,10 +23,3 @@ Research interests:
 – neuroimaging
 – scientific programming
 – statistics
-
-
-
-    
-    
-    
-    
