--- a/people/_posts/2017-12-23-jhobot.md
+++ b/people/_posts/2017-12-23-jhobot.md
@@ -1,6 +1,9 @@
 ﻿---
 layout: post
 title:  "Justyna Hobot"
+name: Justyna
+surname: Hobot
+
 date:   2017-12-23 09:00:00
 categories: people
 image-file: /images/people/jhobot.jpg
@@ -20,9 +23,3 @@ Research interests:
 – the influence of subliminal visual stimuli on behaviour and metacognition
 – transcranial magnetic stimulation in investigation of feed-forward and feedback processes in the visual system
 – the methodological aspects of non-invasive brain stimulation techniques
-
-
-    
-    
-    
-    
