--- a/people/_posts/2017-12-24-ugorska.md
+++ b/people/_posts/2017-12-24-ugorska.md
@@ -1,6 +1,8 @@
 ﻿---
 layout: post
 title:  "Urszula Górska"
+name: Urszula
+surname: Górska
 date:   2017-12-24 09:00:00
 categories: people
 image-file: /images/people/ugorska.jpg
@@ -21,10 +23,3 @@ Research interests:
 – rhythms in the brain
 – temporal perception
 – water network percolation in modeling the outer membrane behaviour cell migration
-
-
-
-    
-    
-    
-    
