--- a/people/_posts/2017-12-26-mderda.md
+++ b/people/_posts/2017-12-26-mderda.md
@@ -1,6 +1,8 @@
 ﻿---
 layout: post
 title:  "Monika Derda"
+name: Monika
+surname: Derda
 date:   2017-12-26 09:00:00
 categories: people
 image-file: /images/people/mderda.jpg
@@ -12,10 +14,3 @@ researchgate:
 ---
 
 PhD student in the Institute of Psychology, Jagiellonian University.
-
-
-
-    
-    
-    
-    
