--- a/people/_posts/2017-12-28-mreuter.md
+++ b/people/_posts/2017-12-28-mreuter.md
@@ -1,6 +1,8 @@
 ﻿---
 layout: post
 title:  "Magdalena Reuter"
+name: Magdalena
+surname: Reuter
 date:   2017-12-28 09:00:00
 categories: people
 image-file: /images/people/mreuter.jpg
