--- a/people/_posts/2017-12-31-mbinder.md
+++ b/people/_posts/2017-12-31-mbinder.md
@@ -1,9 +1,11 @@
 ﻿---
 layout: post
 title:  "Marek Binder"
+name: Marek
+surname: Binder
 date:   2017-12-31 09:00:00
 categories: people
-image-file: /images/people/mbinder2.jpg
+image-file: /images/people/mbinder.jpg
 mail: marek.binder@gmail.com
 category: clab
 ---
