--- a/people/_posts/2017-12-15-pbizon.md
+++ b/people/_posts/2017-12-15-pbizon.md
@@ -1,6 +1,8 @@
 ﻿---
 layout: post
 title:  "Patrycja Bizoń"
+name: Patrycja
+surname: Bizoń
 date:   2017-12-15 09:00:00
 categories: people
 image-file: /images/people/pbizon.jpg
@@ -11,8 +13,4 @@ twitter:
 researchgate: 
 ---
 
-
-    
-    
-    
-    
+Younger researcher at C-Lab.
