--- a/people/_posts/2017-12-17-khat.md
+++ b/people/_posts/2017-12-17-khat.md
@@ -1,6 +1,8 @@
 ﻿---
 layout: post
 title:  "Katarzyna Hat"
+name: Katarzyna
+surname: Hat
 date:   2017-12-17 09:00:00
 categories: people
 image-file: /images/people/khat.jpg
@@ -11,9 +13,4 @@ twitter:
 researchgate: 
 ---
 
-
-
-    
-    
-    
-    
+Younger researcher at C-Lab.
