minor publication corrections

--- a/publications/_posts/2017-01-02-jonkisz.md
+++ b/publications/_posts/2017-01-02-jonkisz.md
@@ -6,4 +6,4 @@ categories: article
 year: 2017
 ---
 
-Jonkisz, J., Wierzchoñ, M. i Binder, M. (2017). Four-dimensional graded consciousness. Frontiers in Psychology, 8, 420.
+Jonkisz, J., WierzchoÅ„, M. i Binder, M. (2017). Four-dimensional graded consciousness. Frontiers in Psychology, 8, 420.
