--- a/people/_posts/2017-12-14-obecev.md
+++ b/people/_posts/2017-12-14-obecev.md
@@ -1,14 +1,14 @@
 ﻿---
 layout: post
 title:  "Ondřej Bečev"
-name: Ondřej
-surname: Bečev
+name: Ondrej
+surname: Becev
 date:   2017-12-14 09:00:00
 categories: people
 image-file: /images/people/obecev.jpg
 category: colab
 mail: ondrej@becev.cz
-website: 
+website:
 twitter:
 researchgate: https://www.researchgate.net/profile/Ondej_Becev
 ---
