correcting typos in people's bios

--- a/people/_posts/2017-12-15-pbizon.md
+++ b/people/_posts/2017-12-15-pbizon.md
@@ -8,9 +8,9 @@ categories: people
 image-file: /images/people/pbizon.jpg
 category: clab
 mail: patrycja.bizon@gmail.com
-website: 
+website:
 twitter:
-researchgate: 
+researchgate:
 ---
 
-Younger researcher at C-Lab.
+Junior researcher at C-Lab.
