--- a/people/_posts/2017-12-17-khat.md
+++ b/people/_posts/2017-12-17-khat.md
@@ -8,9 +8,9 @@ categories: people
 image-file: /images/people/khat.jpg
 category: clab
 mail: hat.kasia@gmail.com
-website: 
+website:
 twitter:
-researchgate: 
+researchgate:
 ---
 
-Younger researcher at C-Lab.
+Junior researcher at C-Lab.
