--- a/people/_posts/2017-12-19-zskora.md
+++ b/people/_posts/2017-12-19-zskora.md
@@ -8,14 +8,14 @@ categories: people
 image-file: /images/people/zskora.jpg
 category: clab
 mail: zuzanna.skora@gmail.com
-website: 
+website:
 twitter:
-researchgate: 
+researchgate:
 ---
 
-PhD student in the Institute of Psychology, Jagiellonian University.
+PhD student at the Institute of Psychology, Jagiellonian University.
 
-My research concentrates on the influence of selective attention on the quality and subjective accessibility of short-term memory and working memory. 
+My research concentrates on the influence of selective attention on the quality and subjective accessibility of short-term memory and working memory.
 
 Research interests:
 – the retro-cue benefit
