--- a/people/_posts/2017-12-24-ugorska.md
+++ b/people/_posts/2017-12-24-ugorska.md
@@ -8,15 +8,15 @@ categories: people
 image-file: /images/people/ugorska.jpg
 category: clab
 mail: u.j.gorska@gmail.com
-website: 
+website:
 twitter:
-researchgate: 
+researchgate:
 ---
 
-PhD student in the Institute of Psychology, Jagiellonian University.
+PhD student at the Institute of Psychology, Jagiellonian University.
 
 My scientific interests mainly focus on consciousness and rhythms of the brain. The topic of my master thesis research is an attempt to establish a method of diagnosing consciousness after severe brain injuries (e.g. vegetative state patients). I also plan to join the virtual reality group to study bodily consciousness.
-          
+
 Research interests:
 – different states of consciousness
 – influence of psychoactive drugs or anaestesia agents on the brain and sleep mechanisms
