--- a/people/_posts/2017-12-26-mderda.md
+++ b/people/_posts/2017-12-26-mderda.md
@@ -8,9 +8,9 @@ categories: people
 image-file: /images/people/mderda.jpg
 category: clab
 mail: monika.derda@gmail.com
-website: 
+website:
 twitter:
-researchgate: 
+researchgate:
 ---
 
-PhD student in the Institute of Psychology, Jagiellonian University.
+PhD student at the Institute of Psychology, Jagiellonian University.
