--- a/people/_posts/2017-12-28-mreuter.md
+++ b/people/_posts/2017-12-28-mreuter.md
@@ -8,12 +8,12 @@ categories: people
 image-file: /images/people/mreuter.jpg
 category: clab
 mail: magda.reuter@gmail.com
-website: 
+website:
 twitter:
-researchgate: 
+researchgate:
 ---
 
-Post-doc in the Institute of Psychology, Jagiellonian University.
+Post-doc at the Institute of Psychology, Jagiellonian University.
 
 The main goal of my current research is to investigate how sensory substitution devices shape subjective content of perceptual experience. I’m especially interested in phenomenology of experience during spatial representation and object recognition and enactive approach applied to studies on sensory substitution.
 
