--- a/people/_posts/2017-12-11-wkalwak.md
+++ b/people/_posts/2017-12-11-wkalwak.md
@@ -8,12 +8,12 @@ categories: people
 image-file: /images/people/wkalwak.jpg
 category: colab
 mail: weronika.kalwak@gmail.com
-website: 
+website:
 twitter:
-researchgate: 
+researchgate:
 ---
 
-PhD student in the Institute of Psychology, Jagiellonian University.
+PhD student at the Institute of Psychology, Jagiellonian University.
 
 My scientific interest is human experience of any kind but especially our scientific ways of acknowledge it. I’m trying to convince experimental researchers to use qualitative methodology.
 
