--- a/people/_posts/2017-12-20-sdelpin.md
+++ b/people/_posts/2017-12-20-sdelpin.md
@@ -8,9 +8,9 @@ categories: people
 image-file: /images/people/sdelpin.jpg
 category: clab
 mail: simon.dp@gmail.com
-website: 
+website:
 twitter:
-researchgate: 
+researchgate:
 ---
 
-PhD student in the Institute of Psychology, Jagiellonian University.
+PhD student at the Institute of Psychology, Jagiellonian University.
