--- a/people/_posts/2017-12-22-mkoculak.md
+++ b/people/_posts/2017-12-22-mkoculak.md
@@ -8,12 +8,12 @@ categories: people
 image-file: /images/people/mkoculak.jpg
 category: clab
 mail: koculak.marcin@gmail.com
-website: 
+website:
 twitter:
-researchgate: 
+researchgate:
 ---
 
-PhD student in the Institute of Psychology, Jagiellonian University.
+PhD student at the Institute of Psychology, Jagiellonian University.
 
 In my Ph.D. I want to focus on using BCI (Brain-Computer Interface) methodology for consciousness research. Predominantly I work with neuroimaging data (EEG, fMRI) but I am always eager to learn new methods and approaches. Self-taught python user, also using R or Matlab if needed. Apart from studying consciousness, I enjoy learning about math, cosmology and visualization. But for the most part it's brains.
 
