--- a/people/_posts/2017-12-23-jhobot.md
+++ b/people/_posts/2017-12-23-jhobot.md
@@ -9,12 +9,12 @@ categories: people
 image-file: /images/people/jhobot.jpg
 category: clab
 mail: tojustyna@protonmail.ch
-website: 
+website:
 twitter:
-researchgate: 
+researchgate:
 ---
 
-PhD student in the Institute of Psychology, Jagiellonian University.
+PhD student at the Institute of Psychology, Jagiellonian University.
 
 Ever since I realized I am conscious, it has never stopped bothering me why. I try to understand the neuronal processes that underlie conscious perception and their temporal dynamics by employing methods that affect their course and metacognition. I find it intriguing, simply because these processes are the primary basis for emergence of any conscious thought we experience in life.
 
