update, bug fixes
Updated with sites. Fixed mobile display bugs.

--- a/people/_posts/2017-12-20-sdelpin1.md
+++ b/people/_posts/2017-12-20-sdelpin1.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "Simon del Pin"
+title:  "Simon del Pin 1"
 name: "Simon "
-surname: del Pin
+surname: del Pin 1
 date:   2017-12-20 09:00:00
 categories: people
 image-file: /images/people/sdelpin.jpg
