--- a/people/_posts/2018-03-01-ksandberg4.md
+++ b/people/_posts/2018-03-01-ksandberg4.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "Kristian Sandberg"
+title: "Kristian Sandberg 4"
 name: "Kristian "
-surname: Sandberg
+surname: Sandberg 4
 date: 2018-03-01 09:00:00
 categories: people
 category: perception
