--- a/labs/_posts/2018-05-05-cfin.md
+++ b/labs/_posts/2018-05-05-cfin.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: "Perception and Neuroarchitectural Mapping Group"
+title: "Center of Functionally Integrative Neuroscience"
 date: 2018-05-05 09:00:00
 category: laboratories
-code: perception
+code: cfin
 image-file: /images/cfin-logo.png
-mail: krissand@rm.dk
-website: "c-lab.pl"
+mail:
+website: "http://cfin.au.dk/"
 ---
 
 This a more broad short description of this particular lab. Please change it to something meaningful as it is placed here only to be subjected to multiple tests during development.
