--- a/labs/_posts/2018-05-05-cfin.md
+++ b/labs/_posts/2018-05-05-cfin.md
@@ -3,7 +3,7 @@ layout: post
 title: "Center of Functionally Integrative Neuroscience"
 date: 2018-05-05 09:00:00
 category: laboratories
-code: cfin
+code: perception
 image-file: /images/cfin-logo.png
 mail:
 website: "http://cfin.au.dk/"
