--- a/people/_posts/2018-02-01-kanai.md
+++ b/people/_posts/2018-02-01-kanai.md
@@ -5,7 +5,7 @@ name: "Ryota "
 surname: Kanai
 date: 2018-03-01 09:00:00
 categories: people
-category: perception
+category: araya
 image-file: /images/people/Ryota_Kanai-360x359.jpg
 mail: kanair@gmail.com
 website: "http://www.araya.org/en/"
