--- a/people/_posts/2018-02-01-lambertC.md
+++ b/people/_posts/2018-02-01-lambertC.md
@@ -5,8 +5,8 @@ name: "Christian "
 surname: Lambert
 date: 2018-03-01 09:00:00
 categories: people
-category: perception
-image-file: /images/people/Lambert.jpg
+category: fil
+image-file: /images/people/LAMBERT.jpg
 mail: clambert112358@gmail.com
 website: "https://iris.ucl.ac.uk/iris/browse/profile?upi=CLAMB18"
 twitter: "https://twitter.com/clambert112358"
