--- a/people/_posts/2018-02-01-yamadaM.md
+++ b/people/_posts/2018-02-01-yamadaM.md
@@ -5,7 +5,7 @@ name: "Makiko "
 surname: Yamada
 date: 2018-03-01 09:00:00
 categories: people
-category: perception
+category: nirs
 image-file: /images/people/yamada.jpg
 mail: makiko.p.yamada@gmail.com
 website: "http://www.nirs.qst.go.jp/seika/brain/english/team/clinical_06.html"
