--- a/labs/_posts/2018-05-05-cfin.md
+++ b/labs/_posts/2018-05-05-cfin.md
@@ -5,9 +5,8 @@ date: 2018-05-05 09:00:00
 category: laboratories
 code: perception
 image-file: /images/cfin-logo.png
-mail:
+mail: krissand@rm.dk
 website: "http://cfin.au.dk/"
 ---
 
-This a more broad short description of this particular lab. Please change it to something meaningful as it is placed here only to be subjected to multiple tests during development.
-Taking this occasion, the developer would like to say to you: hi, there. ;)
+coming soon
