sites, people updates
Marek added. Image fixes.

--- a/labs/_posts/2018-05-05-c-lab.md
+++ b/labs/_posts/2018-05-05-c-lab.md
@@ -1,13 +1,12 @@
 ---
 layout: post
-title: "C-Lab"
+title: "Institute of Psychology, Jagiellonian University in Krakow, Poland"
 date: 2018-05-05 09:00:00
 category: laboratories
-code: clab
-image-file: /images/c-lab.svg
-mail: mwierzchon@gmail.com
-website: "c-lab.pl"
+code: jagiellonian
+image-file: /images/sites/jagiellonian.png
+mail:
+website: "http://www.psychologia.uj.edu.pl/en_GB/start"
 ---
 
-This a more broad short description of this particular lab. Please change it to something meaningful as it is placed here only to be subjected to multiple tests during development.
-Taking this occasion, the developer would like to say to you: hi, there. ;)
+coming soon
