--- a/people/_posts/2018-02-01-kanaiR.md
+++ b/people/_posts/2018-02-01-kanaiR.md
@@ -13,4 +13,4 @@ twitter: "https://twitter.com/kanair?lang=en"
 researchgate: "https://www.researchgate.net/profile/Ryota_Kanai"
 ---
 
---
+details coming soon
