--- a/people/_posts/2018-02-01-lambertC.md
+++ b/people/_posts/2018-02-01-lambertC.md
@@ -13,4 +13,4 @@ twitter: "https://twitter.com/clambert112358"
 researchgate: "https://www.researchgate.net/profile/Christian_Lambert2"
 ---
 
---
+details coming soon
