--- a/labs/_posts/2018-05-05-araya.md
+++ b/labs/_posts/2018-05-05-araya.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: "Araya"
+title: "Araya Inc, Tokyo, Japan"
 date: 2018-05-05 09:00:00
 category: laboratories
 code: araya
-image-file: /images/araya.png
-mail: 
+image-file: /images/sites/araya.png
+mail:
 website: "http://www.araya.org/en/"
 ---
 coming soon
