--- a/labs/_posts/2018-05-05-fil.md
+++ b/labs/_posts/2018-05-05-fil.md
@@ -1,10 +1,11 @@
 ---
 layout: post
-title: "Wellcome Trust Centre for Neuroimaging at UCL"
+title: "Wellcome Trust Centre for Neuroimaging, University College London, United Kingdom"
 date: 2018-05-05 09:00:00
 category: laboratories
 code: fil
-image-file: /images/ucl.gif
+image-file: /images/sites/ucl.gif
 mail:
 website: "http://www.fil.ion.ucl.ac.uk/"
 ---
+coming soon
