--- a/labs/_posts/2018-05-05-nirs.md
+++ b/labs/_posts/2018-05-05-nirs.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "National Institute of Radiological Sciences"
+title: "Department of Functional Brain Imaging Research, National Institute of Radiological Sciences, Chiba, Japan"
 date: 2018-05-05 09:00:00
 category: laboratories
 code: nirs
-image-file: /images/nirs.png
+image-file: /images/sites/nirs.png
 mail:
 website: "http://www.nirs.qst.go.jp/ENG/index.shtml"
 ---
