--- a/people/_posts/2018-02-01-binderM.md
+++ b/people/_posts/2018-02-01-binderM.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "Michał Wierzchoń"
-name: "Michał "
-surname: Wierzchoń
+title: "Marek Binder"
+name: "Marek "
+surname: Binder
 date: 2018-01-06 09:00:00
 categories: people
 category: jagiellonian
