--- a/labs/_posts/2018-05-05-cfin.md
+++ b/labs/_posts/2018-05-05-cfin.md
@@ -3,7 +3,7 @@ layout: post
 title: "Center of Functionally Integrative Neuroscience, Aarhus University, Aarhus, Denmark"
 date: 2018-05-05 09:00:00
 category: laboratories
-code: perception
+code: cfin
 image-file: /images/sites/cfin-logo.png
 mail: krissand@rm.dk
 website: "http://cfin.au.dk/"
