--- a/labs/_posts/2018-05-05-cfin.md
+++ b/labs/_posts/2018-05-05-cfin.md
@@ -5,7 +5,7 @@ date: 2018-05-05 09:00:00
 category: laboratories
 code: cfin
 image-file: /images/sites/cfin-logo.png
-mail: krissand@rm.dk
+mail: 
 website: "http://cfin.au.dk/"
 ---
 
