--- a/labs/_posts/2018-05-05-nirs.md
+++ b/labs/_posts/2018-05-05-nirs.md
@@ -6,7 +6,7 @@ category: laboratories
 code: nirs
 image-file: /images/sites/nirs.png
 mail:
-website: "http://www.nirs.qst.go.jp/ENG/index.shtml"
+website: "http://www.nirs.qst.go.jp/ENG/core/bfi/index.html"
 ---
 
 coming soon
