--- a/labs/_posts/2018-05-05-c-lab.md
+++ b/labs/_posts/2018-05-05-c-lab.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "Institute of Psychology, Jagiellonian University in Krakow, Poland"
+title: "Institute of Psychology"
+location: "Jagiellonian University in Krakow, Poland"
 date: 2018-05-05 09:00:00
 category: laboratories
 code: jagiellonian
