--- a/people/_posts/2018-02-01-lambertC.md
+++ b/people/_posts/2018-02-01-lambertC.md
@@ -4,13 +4,14 @@ title: "Christian Lambert"
 name: "Christian "
 surname: Lambert
 date: 2018-03-01 09:00:00
-categories: people
+categories: people member
 category: fil
 image-file: /images/people/LAMBERT.jpg
 mail: clambert112358@gmail.com
 website: "https://iris.ucl.ac.uk/iris/browse/profile?upi=CLAMB18"
 twitter: "https://twitter.com/clambert112358"
 researchgate: "https://www.researchgate.net/profile/Christian_Lambert2"
+scholar: https://scholar.google.com/citations?user=j-grmyMAAAAJ&hl=en
 ---
 
 details coming soon
