--- a/people/_posts/2018-02-01-binderM.md
+++ b/people/_posts/2018-02-01-binderM.md
@@ -4,13 +4,14 @@ title: "Marek Binder"
 name: "Marek "
 surname: Binder
 date: 2018-01-06 09:00:00
-categories: people
+categories: people member
 category: jagiellonian
 image-file: /images/people/binder.jpg
 mail: marek.binder@gmail.com
 website: http://www.psychologia.uj.edu.pl/marek-binder
 twitter:
 researchgate: https://www.researchgate.net/profile/Marek_Binder
+scholar:
 ---
 
 details coming soon
