--- a/people/_posts/2018-02-01-kanaiR.md
+++ b/people/_posts/2018-02-01-kanaiR.md
@@ -4,13 +4,14 @@ title: "Ryota Kanai"
 name: "Ryota "
 surname: Kanai
 date: 2018-03-01 09:00:00
-categories: people
+categories: people member
 category: araya
 image-file: /images/people/Ryota_Kanai-360x359.jpg
 mail: kanair@gmail.com
 website: "http://www.araya.org/en/"
 twitter: "https://twitter.com/kanair?lang=en"
 researchgate: "https://www.researchgate.net/profile/Ryota_Kanai"
+scholar: https://scholar.google.com/citations?user=zaAL6YEAAAAJ&hl=en
 ---
 
 details coming soon
