lab pages corrections

--- a/labs/_posts/2018-05-05-cercare.md
+++ b/labs/_posts/2018-05-05-cercare.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "Cercare Medical ApS, Aarhus, Denmark"
+title: "Cercare Medical ApS"
+location: "Aarhus, Denmark"
 date: 2018-05-05 09:00:00
 category: laboratories
 code: cercare
