--- a/labs/_posts/2018-05-05-cfin.md
+++ b/labs/_posts/2018-05-05-cfin.md
@@ -1,11 +1,12 @@
 ---
 layout: post
-title: "Center of Functionally Integrative Neuroscience, Aarhus University, Aarhus, Denmark"
+title: "Center of Functionally Integrative Neuroscience"
+location: "Aarhus University, Aarhus, Denmark"
 date: 2018-05-05 09:00:00
 category: laboratories
 code: cfin
 image-file: /images/sites/cfin-logo.png
-mail: 
+mail:
 website: "http://cfin.au.dk/"
 ---
 
