--- a/labs/_posts/2018-05-05-nirs.md
+++ b/labs/_posts/2018-05-05-nirs.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "Department of Functional Brain Imaging Research, National Institute of Radiological Sciences, Chiba, Japan"
+title: "Department of Functional Brain Imaging Research"
+location: "National Institute of Radiological Sciences, Chiba, Japan"
 date: 2018-05-05 09:00:00
 category: laboratories
 code: nirs
