--- a/labs/_posts/2018-05-05-araya.md
+++ b/labs/_posts/2018-05-05-araya.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "Araya Inc, Tokyo, Japan"
+title: "Araya Inc"
+location: "Tokyo, Japan"
 date: 2018-05-05 09:00:00
 category: laboratories
 code: araya
