--- a/labs/_posts/2018-05-05-fil.md
+++ b/labs/_posts/2018-05-05-fil.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "Wellcome Trust Centre for Neuroimaging, University College London, United Kingdom"
+title: "Wellcome Trust Centre for Neuroimaging"
+location: "University College London, United Kingdom"
 date: 2018-05-05 09:00:00
 category: laboratories
 code: fil
