--- a/labs/_posts/2018-05-05-cercare.md
+++ b/labs/_posts/2018-05-05-cercare.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Cercare Medical ApS"
-location: "Aarhus, Denmark"
+title:
+location:
 date: 2018-05-05 09:00:00
 category: laboratories
 code: cercare
@@ -9,5 +9,4 @@ image-file: /images/sites/cercare.jpg
 mail:
 website: "https://cercare-medical.com/"
 ---
-
-coming soon
+Cercare Medical ApS, Aarhus, Denmark.
