--- a/people/_posts/2018-02-01-binderM.md
+++ b/people/_posts/2018-02-01-binderM.md
@@ -13,5 +13,4 @@ twitter:
 researchgate: https://www.researchgate.net/profile/Marek_Binder
 scholar:
 ---
-
-details coming soon
+Assistant Professor at the Institute of Psychology, Jagiellonian University.
