--- a/people/_posts/2018-02-01-kanaiR.md
+++ b/people/_posts/2018-02-01-kanaiR.md
@@ -13,5 +13,5 @@ twitter: "https://twitter.com/kanair?lang=en"
 researchgate: "https://www.researchgate.net/profile/Ryota_Kanai"
 scholar: https://scholar.google.com/citations?user=zaAL6YEAAAAJ&hl=en
 ---
-
-details coming soon
+Founder and CEO of Araya Brain Imaging and affiliated scientist at  Earth-Life Science Institute (ELSI),
+Tokyo Institute of Technology.
