--- a/people/_posts/2018-02-01-yamadaM.md
+++ b/people/_posts/2018-02-01-yamadaM.md
@@ -13,5 +13,4 @@ twitter:
 researchgate:
 scholar:
 ---
-
-details coming soon
+Leader of the [Brain and Mind Research Team](http://www.nirs.qst.go.jp/seika/brain/english/team/clinical_06.html) at the National Institute of Radiological Sciences, Chiba, Japan.
