sites display update

--- a/labs/_posts/2018-05-05-cercare.md
+++ b/labs/_posts/2018-05-05-cercare.md
@@ -9,4 +9,4 @@ image-file: /images/sites/cercare.jpg
 mail:
 website: "https://cercare-medical.com/"
 ---
-Cercare Medical ApS, Aarhus, Denmark.
+[Cercare Medical ApS](https://cercare-medical.com), Aarhus, Denmark.
