--- a/labs/_posts/2018-05-05-cfin.md
+++ b/labs/_posts/2018-05-05-cfin.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Center of Functionally Integrative Neuroscience"
-location: "Aarhus University, Aarhus, Denmark"
+title:
+location:
 date: 2018-05-05 09:00:00
 category: laboratories
 code: cfin
@@ -9,5 +9,4 @@ image-file: /images/sites/cfin-logo.png
 mail:
 website: "http://cfin.au.dk/"
 ---
-
-coming soon
+[Center of Functionally Integrative Neuroscience](http://cfin.au.dk/), Aarhus University, Aarhus, Denmark.
