--- a/labs/_posts/2018-05-05-fil.md
+++ b/labs/_posts/2018-05-05-fil.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Wellcome Trust Centre for Neuroimaging"
-location: "University College London, United Kingdom"
+title:
+location:
 date: 2018-05-05 09:00:00
 category: laboratories
 code: fil
@@ -9,4 +9,4 @@ image-file: /images/sites/ucl.gif
 mail:
 website: "http://www.fil.ion.ucl.ac.uk/"
 ---
-coming soon
+[Wellcome Trust Centre for Neuroimaging](http://www.fil.ion.ucl.ac.uk/), University College London, United Kingdom.
