--- a/labs/_posts/2018-05-05-nirs.md
+++ b/labs/_posts/2018-05-05-nirs.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Department of Functional Brain Imaging Research"
-location: "National Institute of Radiological Sciences, Chiba, Japan"
+title:
+location:
 date: 2018-05-05 09:00:00
 category: laboratories
 code: nirs
@@ -9,5 +9,4 @@ image-file: /images/sites/nirs.png
 mail:
 website: "http://www.nirs.qst.go.jp/ENG/core/bfi/index.html"
 ---
-
-coming soon
+[Department of Functional Brain Imaging Research](http://www.nirs.qst.go.jp/ENG/core/bfi/index.html), National Institute of Radiological Sciences, Chiba, Japan.
