--- a/labs/_posts/2018-05-05-araya.md
+++ b/labs/_posts/2018-05-05-araya.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Araya Inc"
-location: "Tokyo, Japan"
+title:
+location:
 date: 2018-05-05 09:00:00
 category: laboratories
 code: araya
@@ -9,4 +9,4 @@ image-file: /images/sites/araya.png
 mail:
 website: "http://www.araya.org/en/"
 ---
-coming soon
+[Araya Inc](http://www.araya.org/en/), Tokyo, Japan.
