--- a/labs/_posts/2018-05-05-cfin.md
+++ b/labs/_posts/2018-05-05-cfin.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:
+title: Center of Functionally Integrative Neuroscience
 location:
 date: 2018-05-05 09:00:00
 category: laboratories
