--- a/labs/_posts/2018-05-05-fil.md
+++ b/labs/_posts/2018-05-05-fil.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:
+title: Wellcome Trust Centre for Neuroimaging
 location:
 date: 2018-05-05 09:00:00
 category: laboratories
