--- a/labs/_posts/2018-05-05-nirs.md
+++ b/labs/_posts/2018-05-05-nirs.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:
+title: Department of Functional Brain Imaging Research, National Institute of Radiological Sciences.
 location:
 date: 2018-05-05 09:00:00
 category: laboratories
