sites layout update
minor

--- a/labs/_posts/2018-05-05-araya.md
+++ b/labs/_posts/2018-05-05-araya.md
@@ -9,4 +9,6 @@ image-file: /images/sites/araya.png
 mail:
 website: "http://www.araya.org/en/"
 ---
-[Araya Inc](http://www.araya.org/en/), Tokyo, Japan.
+Araya Inc, Tokyo, Japan.
+
+[Website](http://www.araya.org/en/)
