--- a/labs/_posts/2018-05-05-cercare.md
+++ b/labs/_posts/2018-05-05-cercare.md
@@ -9,4 +9,6 @@ image-file: /images/sites/cercare.jpg
 mail:
 website: "https://cercare-medical.com/"
 ---
-[Cercare Medical ApS](https://cercare-medical.com), Aarhus, Denmark.
+Cercare Medical ApS Aarhus, Denmark.
+
+[Website](https://cercare-medical.com)
