--- a/labs/_posts/2018-05-05-cfin.md
+++ b/labs/_posts/2018-05-05-cfin.md
@@ -9,4 +9,6 @@ image-file: /images/sites/cfin-logo.png
 mail:
 website: "http://cfin.au.dk/"
 ---
-[Center of Functionally Integrative Neuroscience](http://cfin.au.dk/), Aarhus University, Aarhus, Denmark.
+Center of Functionally Integrative Neuroscience, Aarhus University, Aarhus, Denmark.
+
+[Website](http://cfin.au.dk/)
