--- a/labs/_posts/2018-05-05-fil.md
+++ b/labs/_posts/2018-05-05-fil.md
@@ -9,4 +9,6 @@ image-file: /images/sites/ucl.gif
 mail:
 website: "http://www.fil.ion.ucl.ac.uk/"
 ---
-[Wellcome Trust Centre for Neuroimaging](http://www.fil.ion.ucl.ac.uk/), University College London, United Kingdom.
+Wellcome Trust Centre for Neuroimaging, University College London, United Kingdom.
+
+[Website](http://www.fil.ion.ucl.ac.uk/)
