--- a/labs/_posts/2018-05-05-nirs.md
+++ b/labs/_posts/2018-05-05-nirs.md
@@ -9,4 +9,6 @@ image-file: /images/sites/nirs.png
 mail:
 website: "http://www.nirs.qst.go.jp/ENG/core/bfi/index.html"
 ---
-[Department of Functional Brain Imaging Research](http://www.nirs.qst.go.jp/ENG/core/bfi/index.html), National Institute of Radiological Sciences, Chiba, Japan.
+Department of Functional Brain Imaging Research, National Institute of Radiological Sciences, Chiba, Japan.
+
+[Website](http://www.nirs.qst.go.jp/ENG/core/bfi/index.html)
