--- a/people/_posts/2018-02-01-kanaiR.md
+++ b/people/_posts/2018-02-01-kanaiR.md
@@ -13,5 +13,8 @@ twitter: "https://twitter.com/kanair?lang=en"
 researchgate: "https://www.researchgate.net/profile/Ryota_Kanai"
 scholar: https://scholar.google.com/citations?user=zaAL6YEAAAAJ&hl=en
 ---
-Founder and CEO of Araya Brain Imaging and affiliated scientist at  Earth-Life Science Institute (ELSI),
-Tokyo Institute of Technology.
+Ryota Kanai is a founder and CEO of Araya, Inc., a Tokyo-based AI and Neuroscience startup aiming to understand the computational basis of consciousness by creating consciousness in AI.
+
+After graduating from Department of Biophysics, Kyoto University, Ryota earned his PhD in Experimental Psychology from Utrecht University in Netherlands and worked as a postdoctoral fellow in Caltech and University College London. He continued his research into consciousness as a Reader in Cognitive Neuroscience at Sackler Centre for Consciousness Science, University of Sussex. He returned to his native Japan and founded Araya. He and his team at Araya to discover computational principles underlying consciousness and apply them in designing new forms of artificial intelligence, which can feel and ponder upon its own existence.
+
+Research interests: neural and information basis of consciousness, information and physics, artificial and natural Intelligence, subjectivity and reality.
