--- a/about/_posts/2018-03-14-about.md
+++ b/about/_posts/2018-03-14-about.md
@@ -6,8 +6,8 @@ image: /images/assc22.jpg
 ---
 SkuldNet is a neuroscience consortium established with the aim of exploring the neural architecture of consciousness. The main focus of SkuldNet is linking magnetic resonance imaging (MRI) based neuroarchitectural mapping to normal variation in conscious experience (basic science branch) as well as to diagnosis/prognosis for a range of brain disorders, which have altered or reduced consciousness as a typical symptom.
 
-SkuldNet forms a platform for collaboration where scientists can join forces to conduct high powered MRI studies of normal conscious experience and related clinical disorders as an alternative to conducting smaller scale (potentially under-powered) studies in a race to publish first. By working as a consortium, SkuldNet furthermore strives to ensure that science is conducted efficiently in that MRI sequence design/analysis pipelines as well as statistical analysis pipelines are created in a collaborative effort between expert members, and that they are made available for use by all members (essentially, we aim to simplify these steps of the scientific process by having one group of experts do the base work rather than leaving it to each member to re-invent the process for each study). SkuldNet also emphasizes inclusiveness and equal access: it is open to researchers who do not have access to MRI facilities. This is natural (and cost-free) consequence of the organizational structure. Finally, SkuldNet has the clear aim that part of the clinical efforts should be targeted at areas where the probability of clinical applicability is high, and SkuldNet seeks to facilitate the transition all the way from basic science results to clinical practice. For this reason, SkuldNet includes clinical practitioners as members as well as artificial intelligence companies. We expect further private companies to sprout from SkuldNet as work progresses.
+SkuldNet forms a platform for collaboration where scientists can join forces to conduct high powered MRI studies of normal conscious experience and related clinical disorders as an alternative to conducting smaller scale (potentially under-powered) studies in a race to publish first. By working as a consortium, SkuldNet furthermore strives to ensure that science is conducted efficiently in that MRI sequence design/analysis pipelines as well as statistical analysis pipelines are created in a collaborative effort between expert members, and that they are made available for use by all members (essentially, we aim to simplify these steps of the scientific process by having one group of experts do the base work rather than leaving it to each member to re-invent the process for each study). SkuldNet also emphasizes inclusiveness and equal access: it is open to researchers who do not have access to MRI facilities. This is a natural (and cost-free) consequence of the organizational structure. Finally, SkuldNet has the clear aim that part of the clinical efforts should be targeted at areas where the probability of clinical applicability is high, and SkuldNet seeks to facilitate the transition all the way from basic science results to clinical practice. For this reason, SkuldNet includes clinical practitioners as members as well as artificial intelligence companies. We expect further private companies to sprout from SkuldNet as work progresses.
 
 Current Skuldnet member institutions can be seen [here]( https://skuldnet.github.io/consortium.html#sites), and includes universities, hospitals, and private companies. SkuldNet members include neuroscientists, medical researchers/practitioners, statisticians, AI researchers, MRI physicists, clinical psychologists, and more. The current member list is [here]( https://skuldnet.github.io/consortium.html#members). SkuldNet is open to new members and institutions – [let us know](https://skuldnet.github.io/contact.html) if you are interested and would like to hear more about on-going projects.
 
-Future updates of this website will include more details on the scientific and economic benefits of conducting neuroarchitectural mapping of consciousness within the frame of a consortium, and it will provide greater details on ongoing project and the organizational structure of the consortium.
+Future updates of this website will include more details on the scientific and economic benefits of conducting neuroarchitectural mapping of consciousness within the frame of a consortium, and it will provide greater details on ongoing projects and the organizational structure of the consortium.
