--- a/labs/_posts/2018-05-04-fil.md
+++ b/labs/_posts/2018-05-04-fil.md
@@ -5,6 +5,7 @@ location:
 date: 2018-05-05 09:00:00
 category: laboratories
 code: fil
+sortname: University College London
 image-file: /images/sites/ucl.gif
 mail:
 website: "http://www.fil.ion.ucl.ac.uk/"
