--- a/labs/_posts/2018-05-07-nirs.md
+++ b/labs/_posts/2018-05-07-nirs.md
@@ -5,6 +5,7 @@ location:
 date: 2018-05-05 09:00:00
 category: laboratories
 code: nirs
+sortname: National Institute of Radiological Sciences
 image-file: /images/sites/nirs.png
 mail:
 website: "http://www.nirs.qst.go.jp/ENG/core/bfi/index.html"
