--- a/labs/_posts/2018-05-10-cercare.md
+++ b/labs/_posts/2018-05-10-cercare.md
@@ -5,6 +5,7 @@ location:
 date: 2018-05-05 09:00:00
 category: laboratories
 code: cercare
+sortname: cercare
 image-file: /images/sites/cercare.jpg
 mail:
 website: "https://cercare-medical.com/"
