--- a/labs/_posts/2018-05-09-cfin.md
+++ b/labs/_posts/2018-05-09-cfin.md
@@ -5,6 +5,7 @@ location:
 date: 2018-05-05 09:00:00
 category: laboratories
 code: cfin
+sortname: cfin
 image-file: /images/sites/cfin-logo.png
 mail:
 website: "http://cfin.au.dk/"
