--- a/labs/_posts/2018-05-06-reed.md
+++ b/labs/_posts/2018-05-06-reed.md
@@ -6,7 +6,7 @@ date: 2018-05-05 09:00:00
 category: laboratories
 code: reed
 sortname: reed
-image-file: /images/sites/reed-logo.png
+image-file: /images/sites/reed-logo.jpg
 mail:
 website: "http://www.reed.edu/psychology/scalp/"
 ---
