--- a/people/_posts/2018-01-01-tononiG.md
+++ b/people/_posts/2018-01-01-tononiG.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Giulio Tononi"
-name: "Guilio "
+name: "Giulio "
 surname: Tononi
 date: 2018-03-01 09:00:00
 categories: people member
@@ -13,10 +13,8 @@ researchgate: "https://www.researchgate.net/profile/Giulio_Tononi"
 scholar: https://scholar.google.com/citations?user=914hL5QAAAAJ&hl=en
 ---
 
-Professor of Psychiatry
-Distinguished Professor of Consciousness Studies
-David P White Chair in Sleep Medicine
-University of Wisconsin-Madison
+Professor of Psychiatry, Distinguished Professor of Consciousness Studies, David P White Chair in Sleep Medicine
+University of Wisconsin-Madison.
 
 Director of the [Wisconsin Institute for Sleep and Consciousness](http://centerforsleepandconsciousness.med.wisc.edu/) at the University of Wisconsin-Madison.
 
