--- a/labs/_posts/2018-05-09-phb.md
+++ b/labs/_posts/2018-05-09-phb.md
@@ -6,7 +6,7 @@ date: 2018-05-05 09:00:00
 category: laboratories
 code: phb
 sortname: Psychologische Hochschule Berlin
-image-file: /images/sites/phb_logo.jpg
+image-file: /images/sites/phb_logo.png
 mail:
 website: "https://www.psychologische-hochschule.de/"
 ---
