--- a/labs/_posts/2018-05-09-Hohwy lab.md
+++ b/labs/_posts/2018-05-09-Hohwy lab.md
@@ -6,7 +6,7 @@ date: 2018-05-05 09:00:00
 category: laboratories
 code: cogphil
 sortname: Monash University
-image-file:
+image-file: /images/sites/cogphil.png
 mail:
 website: "https://cog-phil-lab.org/"
 ---
