--- a/people/_posts/2018-01-01-carmelD.md
+++ b/people/_posts/2018-01-01-carmelD.md
@@ -11,7 +11,7 @@ mail: david.carmel@vuw.ac.nz
 website: "https://www.victoria.ac.nz/psyc/about/staff/david-carmel"
 twitter:
 researchgate: "https://www.researchgate.net/profile/David_Carmel3"
-scholar: scholar.google.com/citations?user=i0_gg_YAAAAJ&hl=en
+scholar: https://scholar.google.com/citations?user=i0_gg_YAAAAJ&hl=en
 ---
 
 Senior Lecturer in the School of Psychology at Victoria University of Wellington, New Zealand.
