--- a/labs/_posts/2018-05-07-nirs.md
+++ b/labs/_posts/2018-05-07-nirs.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Department of Functional Brain Imaging Research, National Institute of Radiological Sciences.
+title: Department of Functional Brain Imaging Research
 location:
 date: 2018-05-05 09:00:00
 category: laboratories
@@ -10,6 +10,6 @@ image-file: /images/sites/nirs.png
 mail:
 website: "http://www.nirs.qst.go.jp/ENG/core/bfi/index.html"
 ---
-Department of Functional Brain Imaging Research, National Institute of Radiological Sciences, Chiba, Japan.
+Department of Functional Brain Imaging Research, National Institute of Radiological Sciences, National Institutes for Quantum and Radiological Science and Technology (QST), Chiba, Japan.
 
 [Website](http://www.nirs.qst.go.jp/ENG/core/bfi/index.html)
